<resources>
    <string name="app_name">Location</string>
    <string name="obter_ultima_localiza_o">Obter Ultima Localização</string>
    <string name="come_ar_atualiza_es_peri_dicas">Começar Atualizações Periódicas</string>
    <string name="parar_atualiza_es_peri_dicas">Parar Atualizações Periódicas</string>
    <string name="localiza_o">Localização</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="geocoder">Geocoder</string>
    <string name="accuracy">Accuracy :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>